[package]
name = "g2g-plugins"
description = "Standard source, sink, and transform elements for the glass2glass framework."
license = "LGPL-2.1-or-later"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
std = ["g2g-core/std", "dep:tokio"]
multi-thread = ["g2g-core/multi-thread"]
# RTSP source element wrapping the `retina` crate. Pulls retina, futures, url; implies std + tokio.
rtsp = ["std", "dep:retina", "dep:futures-util", "dep:url", "dep:bytes"]
# Windows hardware/software H.264 decode via the Media Foundation H.264 Decoder
# MFT (IMFTransform). Pulls the windows crate; Windows-only, implies std.
mf-decode = ["std", "dep:windows"]
# Windows H.264 encode via the Media Foundation H.264 Encoder MFT
# (CLSID_MSH264EncoderMFT). NV12 in, Annex-B H.264 out; low-latency mode on.
# Pulls the windows crate; Windows-only, implies std.
mf-encode = ["std", "dep:windows"]
# Windows D3D11 present sink (W1 Phase 4): displays MemoryDomain::D3D11Texture
# frames in a Win32 window via a DXGI swapchain + D3D11 video processor
# (NV12->RGB on the GPU). The Windows analog of CudaGlSink. Windows-only,
# implies std. Pairs with MfDecode::with_d3d11().
d3d11-sink = ["std", "dep:windows"]
# Linux hardware H.264 decode via VAAPI through the `cros-codecs` crate.
# Pulls cros-codecs (+ libva + GBM bindings); Linux-only, implies std.
vaapi = ["std", "dep:cros-codecs"]
# ffmpeg/libavcodec H.264 decode (software baseline; VAAPI hwaccel deferred).
# Pulls ffmpeg-next + ffmpeg-sys; Linux-only, implies std. Needs system libav*
# (Fedora: ffmpeg-free-devel; Debian/Ubuntu: libavcodec-dev libavformat-dev
# libavutil-dev). This is the production-ready Linux decode path while the
# `vaapi` feature is blocked on cros-codecs GBM/NV12 surface allocation.
ffmpeg = ["std", "dep:ffmpeg-next"]
# Embassy single-core executor support. Implementation deferred to a later milestone.
embassy = []
# CUDA device-memory consumers (C3 Phase 3). `CudaDownload` copies a
# `Backend::NvdecCuda` `MemoryDomain::Cuda` NV12 frame back to system memory
# (device->host `cuMemcpy2D`) so the decode path reaches the existing CPU
# sinks for bring-up. Hand-rolled FFI linking `libcuda` directly (no crate
# dep); Linux + NVIDIA only, implies std. See DESIGN-C3-cuda.md §3.4, §4.
cuda = ["std"]
# CUDA-GL zero-copy-ish display sink (`CudaGlSink`, C3 Phase 3 step 2). Keeps
# decoded NV12 on the GPU and presents via CUDA-GL interop (device->texture
# copy + NV12->RGB fragment shader) on a Wayland EGL surface, removing the
# PCIe round-trip and CPU colour convert. Pulls khronos-egl (EGL), glow (GL
# ES), wayland-egl (wl_egl_window), and SCTK (windowing). Linux + NVIDIA only.
cuda-gl = ["cuda", "dep:khronos-egl", "dep:glow", "dep:wayland-egl", "dep:smithay-client-toolkit"]
# KMS/DRM video sink: NV12 dumb-buffer scanout via the primary plane on the
# active CRTC. Pulls `drm` (libdrm bindings) + `drm-fourcc`; Linux-only,
# implies std. Requires DRM master (drop to tty or run with a DRM lease);
# usually conflicts with a running Wayland/X11 compositor. NV12 input only —
# pair with `FfmpegH264Dec::with_output_format(OutputFormat::Nv12)`.
kms-sink = ["std", "dep:drm", "dep:drm-fourcc"]
# Wayland display sink: NV12 in, software-converted to XRGB8888 in a
# `wl_shm` pool, attached to an `xdg_toplevel` window. Linux-only, implies
# std. Pulls smithay-client-toolkit (which transitively brings wayland-*).
# This is the desktop-dev convenience sink; KmsSink is the production
# low-latency path.
wayland-sink = ["std", "dep:smithay-client-toolkit"]

[dependencies]
g2g-core = { path = "../g2g-core", features = ["runtime"] }
tokio = { version = "1", features = ["rt", "time", "sync"], optional = true }
retina = { version = "0.4", optional = true, default-features = false }
futures-util = { version = "0.3", optional = true, default-features = false, features = ["std", "async-await"] }
url = { version = "2", optional = true }
bytes = { version = "1", optional = true }

# Media Foundation bindings are Windows-only; target-gate so other platforms
# never attempt to resolve or build the windows crate.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", optional = true, features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_MediaFoundation",
    "Win32_Media_KernelStreaming",
    # DXVA / D3D11 zero-copy decode output (W1): D3D11 device + texture types,
    # the D3D_DRIVER_TYPE enum, and DXGI (adapter type in D3D11CreateDevice's
    # signature; DXGI_FORMAT for the texture domain).
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    # D3D11 present sink (d3d11-sink): Win32 window + message loop.
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
] }

# VAAPI / GBM bindings are Linux-only; target-gate so other platforms never try
# to resolve cros-codecs (which pulls libva-sys, gbm-sys, drm-sys via bindgen).
[target.'cfg(target_os = "linux")'.dependencies]
cros-codecs = { version = "0.0.6", optional = true, default-features = false, features = ["vaapi"] }
drm = { version = "0.15", optional = true }
drm-fourcc = { version = "2", optional = true }
# ffmpeg-next links against system libavcodec/libavformat/libavutil/libswscale.
# Linux-only target-gate keeps Windows/Wasm/RTOS builds from trying to resolve
# it (the underlying pkg-config probe doesn't fit those targets).
ffmpeg-next = { version = "8.1", optional = true, default-features = false, features = ["codec", "format", "software-scaling"] }
smithay-client-toolkit = { version = "0.20", optional = true }
# CUDA-GL sink (cuda-gl feature). khronos-egl `static` links libEGL at build;
# glow is the GL ES wrapper; wayland-egl turns a wl_surface into an EGL window.
khronos-egl = { version = "6", optional = true, features = ["static"] }
glow = { version = "0.17", optional = true }
wayland-egl = { version = "0.32", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
# Enables the dynamic-slot path (ElementSlot/SwapHandle) for the m8_slot_swap
# integration test only. Feature unification keeps the lib build at `runtime`.
g2g-core = { path = "../g2g-core", features = ["dyn-slot"] }

[lints]
workspace = true
