[package]
name = "g2g-plugins"
description = "Standard source, sink, and transform elements for the glass2glass framework."
license = "LGPL-2.1-or-later"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
std = ["g2g-core/std", "dep:tokio"]
multi-thread = ["g2g-core/multi-thread"]
# RTSP source element wrapping the `retina` crate. Pulls retina, futures, url; implies std + tokio.
rtsp = ["std", "dep:retina", "dep:futures-util", "dep:url", "dep:bytes"]
# UDP egress sink (M47): drives the sans-IO RtpH264Packetizer (M46) and sends
# the RTP packets over a tokio UdpSocket. The I/O half of the live-egress path;
# implies std and adds tokio's net feature. RTCP + RTSP ANNOUNCE/RECORD owed.
udp-egress = ["std", "tokio/net"]
# UDP ingress source (M91): UdpSrc receives RTP on a tokio UdpSocket and
# depayloads H.264 to Annex-B access units. Raw RTP (no RTSP/SDP); implies std
# and adds tokio's net feature. Receive-side jitter buffer / RTCP are owed.
udp-ingress = ["std", "tokio/net"]
# Windows hardware/software H.264 decode via the Media Foundation H.264 Decoder
# MFT (IMFTransform). Pulls the windows crate; Windows-only, implies std.
mf-decode = ["std", "dep:windows"]
# Windows H.264 encode via the Media Foundation H.264 Encoder MFT
# (CLSID_MSH264EncoderMFT). NV12 in, Annex-B H.264 out; low-latency mode on.
# Pulls the windows crate; Windows-only, implies std.
mf-encode = ["std", "dep:windows"]
# Windows AAC audio encode/decode via Media Foundation MFTs (M35/M36):
# MfAacEncode (PCM->AAC, enumerated encoder) and MfAacDecode (AAC->PCM via
# CLSID_MSAACDecMFT). Pulls the windows crate; Windows-only, implies std.
mf-aac = ["std", "dep:windows"]
# Windows WASAPI render sink (M29): plays interleaved PCM (PcmS16Le/PcmF32Le)
# on the default audio endpoint via WASAPI shared mode. The audible-output end
# of the M25 audio path. Pulls the windows crate; Windows-only, implies std.
wasapi-sink = ["std", "dep:windows"]
# Windows WASAPI capture source (M32): captures interleaved PCM from the
# default audio capture endpoint (shared mode), the input mirror of
# WasapiSink. Pulls the windows crate; Windows-only, implies std.
wasapi-src = ["std", "dep:windows"]
# Windows D3D11 present sink (W1 Phase 4): displays MemoryDomain::D3D11Texture
# frames in a Win32 window via a DXGI swapchain + D3D11 video processor
# (NV12->RGB on the GPU). The Windows analog of CudaGlSink. Windows-only,
# implies std. Pairs with MfDecode::with_d3d11().
d3d11-sink = ["std", "dep:windows"]
# Linux hardware H.264 decode via VAAPI through the `cros-codecs` crate.
# Pulls cros-codecs (+ libva + GBM bindings); Linux-only, implies std.
vaapi = ["std", "dep:cros-codecs"]
# ffmpeg/libavcodec H.264 decode (software baseline; VAAPI hwaccel deferred).
# Pulls ffmpeg-next + ffmpeg-sys; Linux-only, implies std. Needs system libav*
# (Fedora: ffmpeg-free-devel; Debian/Ubuntu: libavcodec-dev libavformat-dev
# libavutil-dev). This is the production-ready Linux decode path while the
# `vaapi` feature is blocked on cros-codecs GBM/NV12 surface allocation.
ffmpeg = ["std", "dep:ffmpeg-next"]
# V4L2 capture source (M90): V4l2Src streams YUYV (4:2:2) frames off a
# /dev/videoN UVC device via mmap. Pulls the pure-Rust `v4l` crate (no libv4l C
# dep); Linux-only, implies std. Blocking ioctls run on a dedicated capture
# thread feeding the async run loop over a channel.
v4l2 = ["std", "dep:v4l"]
# Embassy RTOS clock backend (M43): EmbassyClock over embassy-time, the no_std
# analog of WallClock. The tick rate is selected here; a HAL provides the time
# driver at link. The embassy-futures block_on executor primitive (dev-dep)
# runs pipelines, verified in m43_embassy.rs.
embassy = ["dep:embassy-time", "embassy-time/tick-hz-1_000_000"]
# Embassy zero-alloc inter-task packet channel (M45): PacketChannel over
# embassy-sync, the §6.2 stack-channel link. Separate from `embassy` so the host
# test links without embassy-time's HAL driver.
embassy-link = ["dep:embassy-sync"]
# CUDA device-memory consumers (C3 Phase 3). `CudaDownload` copies a
# `Backend::NvdecCuda` `MemoryDomain::Cuda` NV12 frame back to system memory
# (device->host `cuMemcpy2D`) so the decode path reaches the existing CPU
# sinks for bring-up. Hand-rolled FFI linking `libcuda` directly (no crate
# dep); Linux + NVIDIA only, implies std. See DESIGN-C3-cuda.md §3.4, §4.
cuda = ["std"]
# CUDA-GL zero-copy-ish display sink (`CudaGlSink`, C3 Phase 3 step 2). Keeps
# decoded NV12 on the GPU and presents via CUDA-GL interop (device->texture
# copy + NV12->RGB fragment shader) on a Wayland EGL surface, removing the
# PCIe round-trip and CPU colour convert. Pulls khronos-egl (EGL), glow (GL
# ES), wayland-egl (wl_egl_window), and SCTK (windowing). Linux + NVIDIA only.
cuda-gl = ["cuda", "dep:khronos-egl", "dep:glow", "dep:wayland-egl", "dep:smithay-client-toolkit"]
# KMS/DRM video sink: NV12 dumb-buffer scanout via the primary plane on the
# active CRTC. Pulls `drm` (libdrm bindings) + `drm-fourcc`; Linux-only,
# implies std. Requires DRM master (drop to tty or run with a DRM lease);
# usually conflicts with a running Wayland/X11 compositor. NV12 input only —
# pair with `FfmpegH264Dec::with_output_format(OutputFormat::Nv12)`.
kms-sink = ["std", "dep:drm", "dep:drm-fourcc"]
# Wayland display sink: NV12 in, software-converted to XRGB8888 in a
# `wl_shm` pool, attached to an `xdg_toplevel` window. Linux-only, implies
# std. Pulls smithay-client-toolkit (which transitively brings wayland-*).
# This is the desktop-dev convenience sink; KmsSink is the production
# low-latency path.
wayland-sink = ["std", "dep:smithay-client-toolkit"]
# Browser / WebAssembly target (DESIGN.md §6.3). Wasm-gated elements: WasmClock
# (performance.now + setTimeout sleep), WebSocketSrc ingest, and a spawn_local
# browser entry. Pulls wasm-bindgen/js-sys/web-sys/wasm-bindgen-futures
# (target-gated to wasm32); implies std. Build:
# cargo check --target wasm32-unknown-unknown -p g2g-plugins --features web.
web = ["std", "dep:wasm-bindgen", "dep:js-sys", "dep:web-sys", "dep:wasm-bindgen-futures"]
# WebCodecs hardware video decode (M40): WebCodecsDecode wraps the browser
# VideoDecoder, H.264 Annex-B -> RGBA (System). Adds the unstable web-sys
# WebCodecs bindings; the BUILD REQUIRES RUSTFLAGS="--cfg=web_sys_unstable_apis".
# Build: RUSTFLAGS=--cfg=web_sys_unstable_apis cargo check
#   --target wasm32-unknown-unknown -p g2g-plugins --features web-codecs
web-codecs = [
    "web",
    "web-sys/VideoDecoder",
    "web-sys/VideoDecoderInit",
    "web-sys/VideoDecoderConfig",
    "web-sys/EncodedVideoChunk",
    "web-sys/EncodedVideoChunkInit",
    "web-sys/EncodedVideoChunkType",
    "web-sys/VideoFrame",
    "web-sys/VideoFrameCopyToOptions",
    "web-sys/VideoPixelFormat",
    "web-sys/PlaneLayout",
]
# Analytics overlay (M101): AnalyticsOverlay draws AnalyticsMeta detection boxes
# onto a raw RGBA8 frame (the detector -> overlay visible end). Enables g2g-core's
# `metadata` feature so frames carry the typed graph. CPU, no_std baseline; the
# Vello GPU backend is the separate `vello-overlay` feature (M102).
analytics = ["g2g-core/metadata"]
# Vello GPU analytics overlay (M102): VelloAnalyticsOverlay renders the
# AnalyticsMeta detection boxes with the Vello GPU 2D renderer (wgpu) into a
# wgpu texture, output as MemoryDomain::WgpuTexture (kept on GPU, no readback).
# Pulls vello (+ wgpu 29); implies std + analytics. The CPU AnalyticsOverlay is
# the no_std baseline; this is the HD / many-box GPU companion. Pulls wgpu
# directly too (the same crate vello uses) so it shares the GpuContext / sink.
vello-overlay = ["std", "analytics", "dep:vello", "dep:wgpu"]
# GPU presentation sink (M103): WgpuSink presents MemoryDomain::WgpuTexture
# frames (eg from VelloAnalyticsOverlay) by blitting onto a target on the *same*
# shared wgpu device (a wgpu texture is device-bound, so producer and sink must
# share a GpuContext for the handoff to be copy-free). Target is an offscreen
# texture (render-to-texture / screenshot, testable headless) or a caller-built
# wgpu::Surface (on-screen). Pulls wgpu 29; implies std.
wgpu-sink = ["std", "dep:wgpu"]
# AV1 encode via the pure-Rust `rav1e` encoder (Av1Enc, I420 -> CompressedVideo{Av1}).
# default-features = false drops rav1e's NASM asm, CLI `binaries`, and `threading`
# features, so it builds with no system deps (no NASM) as a portable software
# encoder. Cross-platform, implies std. Verified by round-tripping the output
# through `av1parse` (M136).
av1-encode = ["std", "dep:rav1e"]

[dependencies]
g2g-core = { path = "../g2g-core", features = ["runtime"] }
# Pure-Rust AV1 encoder (av1-encode feature). default-features = false drops the
# NASM assembly, the CLI `binaries` deps, and `threading`: a portable software
# encoder with no system dependencies. MSRV 1.74 (within the workspace 1.75).
rav1e = { version = "0.8", optional = true, default-features = false }
tokio = { version = "1", features = ["rt", "time", "sync"], optional = true }
retina = { version = "0.4", optional = true, default-features = false }
futures-util = { version = "0.3", optional = true, default-features = false, features = ["std", "async-await"] }
url = { version = "2", optional = true }
bytes = { version = "1", optional = true }
# Vello GPU 2D renderer (vello-overlay feature, M102). Renders detection boxes
# into a wgpu texture; re-exports wgpu 29 (matching g2g-ml) as `vello::wgpu`.
vello = { version = "0.9", optional = true }
# wgpu for the GpuContext + WgpuSink (and shared with vello, which re-exports the
# same crate). Optional; pulled by vello-overlay / wgpu-sink.
wgpu = { version = "29", optional = true }
# Embassy RTOS clock backend (embassy feature, M43). no_std; embassy-time needs
# a HAL-provided time driver registered at link (owed to hardware).
embassy-time = { version = "0.5", optional = true, default-features = false }
# Embassy zero-alloc packet channel (embassy-link feature, M45). no_std.
embassy-sync = { version = "0.8", optional = true }

# Media Foundation bindings are Windows-only; target-gate so other platforms
# never attempt to resolve or build the windows crate.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", optional = true, features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_MediaFoundation",
    "Win32_Media_KernelStreaming",
    # WASAPI render sink (wasapi-sink): Core Audio endpoint enumeration +
    # IAudioClient/IAudioRenderClient shared-mode render. StructuredStorage is
    # needed for the PROPVARIANT type in IMMDevice::Activate's signature.
    "Win32_Media_Audio",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    # DXVA / D3D11 zero-copy decode output (W1): D3D11 device + texture types,
    # the D3D_DRIVER_TYPE enum, and DXGI (adapter type in D3D11CreateDevice's
    # signature; DXGI_FORMAT for the texture domain).
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    # D3D11 present sink (d3d11-sink): Win32 window + message loop.
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
] }

# VAAPI / GBM bindings are Linux-only; target-gate so other platforms never try
# to resolve cros-codecs (which pulls libva-sys, gbm-sys, drm-sys via bindgen).
[target.'cfg(target_os = "linux")'.dependencies]
cros-codecs = { version = "0.0.6", optional = true, default-features = false, features = ["vaapi"] }
drm = { version = "0.15", optional = true }
drm-fourcc = { version = "2", optional = true }
# Pure-Rust V4L2 bindings (v4l2-sys-mit, no libv4l). Drives the `v4l2` capture
# source. Linux-only target-gate; the V4L2 ioctl ABI is Linux-specific.
v4l = { version = "0.14", optional = true }
# ffmpeg-next links against system libavcodec/libavformat/libavutil/libswscale.
# Linux-only target-gate keeps Windows/Wasm/RTOS builds from trying to resolve
# it (the underlying pkg-config probe doesn't fit those targets).
ffmpeg-next = { version = "8.1", optional = true, default-features = false, features = ["codec", "format", "software-scaling"] }
smithay-client-toolkit = { version = "0.20", optional = true }
# CUDA-GL sink (cuda-gl feature). khronos-egl `static` links libEGL at build;
# glow is the GL ES wrapper; wayland-egl turns a wl_surface into an EGL window.
khronos-egl = { version = "6", optional = true, features = ["static"] }
glow = { version = "0.17", optional = true }
wayland-egl = { version = "0.32", optional = true }

# Browser / WebAssembly bindings (web feature). wasm32-only target gate so
# native builds never resolve them. wasm-bindgen-futures drives the runner
# future on the browser event loop; web-sys features cover performance.now,
# the WebSocket ingest API, and setTimeout (Window).
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window",
    "Performance",
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "Event",
    "CloseEvent",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "RtcDataChannel",
    "RtcDataChannelType",
] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "sync", "net"] }
# Enables the dynamic-slot path (ElementSlot/SwapHandle) for the m8_slot_swap
# integration test only. Feature unification keeps the lib build at `runtime`.
g2g-core = { path = "../g2g-core", features = ["dyn-slot"] }
embassy-futures = "0.1.2"
# critical-section impl for host tests of embassy-sync (embassy-link): it calls
# critical_section::with, which needs an impl at link. The std impl suffices.
critical-section = { version = "1", features = ["std"] }

[lints]
workspace = true
